--- a/index.html
+++ b/index.html
@@ -3,26 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>MiljøFreak</title>
+    <link rel="stylesheet" type="text/css" href="Style.CSS">
   </head>
   <body>
-    <h2 <p>Kontakt os her</p> </h2>
+    <div class="contact">
+    <h2> Kontakt os her </h2>
     <p>Telefon-nr: +45 xx xx xx xx</p>
     <p>E-mail: Spam@gmail.com</p>
-<h1 style="text-align:center;" >Miljø Freak</h1>
-<img "class="irc_mi" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Logo_TV_2015.svg/1200px-Logo_TV_2015.svg.png" onload="typeof google==='object'&&google.aft&&google.aft(this)" width="301" height="387" style="margin-top: 0px;" alt="relateret billede">
+    </div>
+
+    <div class="title">
+      <h1 style="text-align:center;" >MILJØ FREAK</h1>
+
+</div>
+
+<div class="picture">
+<img class="irc_mi" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Logo_TV_2015.svg/1200px-Logo_TV_2015.svg.png" onload="typeof google==='object'&&google.aft&&google.aft(this)" width="301" height="387" style="margin-top: 0px;" alt="relateret billede">
 <p style="text-align:center;">Vores webside tilbyder et smalt sortiment af madkasser og drikkedunke i høj kvalitet bestående af metal for at skåne miljøet. </p>
 
-<div>
-<p style="float:left; width:28%; margin-right:2%; background:#eee; color:black; border:1px solid #ccc; padding:10px">Madkasser</p>
-
-
-<p style="float:left; width:28%; margin-right:2%; background:#eee; color:black; border:1px solid #ccc; padding:10px">Drikkedunke</p>
-
-
-<p style="float:left; width:28%; background:#eee; color:black; border:1px solid #ccc; padding:10px">Termokander</p>
 </div>
 
 
+<div class="allekolonner">
+<div class="kolonne">
+<p class="produktkategori">Madkasser</p>
+<img class="image" src="Images/blomst 1.jpg" alt="">
+<img class="image" src="Images/blomst 2.jpg" alt="">
+<img class="image" src="Images/blomst 3.jpg" alt="">
+</div>
+
+<div class="kolonne">
+<p class="produktkategori">Drikkedunke</p>
+<img class="image" src="Images/fisk 1.jpg" alt="">
+<img class="image" src="Images/fisk 2.jpg" alt="">
+<img class="image" src="Images/fisk 3.jpg" alt="">
+</div>
+
+<div class="kolonne">
+<p class="produktkategori">Termokander</p>
+<img class="image" src="Images/sommerfugl 1.jpg" alt="">
+<img class="image" src="Images/sommerfugl 2.jpg" alt="">
+<img class="image" src="Images/sommerfugl 3.jpg" alt="">
+</div>
+
+</div>
 
 
   </body>
