--- a/index.html
+++ b/index.html
@@ -23,30 +23,27 @@
 
 </div>
 
-
-<div class="allekolonner">
-<div class="kolonne">
+<div class="divall">
+<div class="divinside">
 <p class="produktkategori">Madkasser</p>
 <img class="image" src="Images/blomst 1.jpg" alt="">
 <img class="image" src="Images/blomst 2.jpg" alt="">
 <img class="image" src="Images/blomst 3.jpg" alt="">
 </div>
-
-<div class="kolonne">
-<p class="produktkategori">Drikkedunke</p>
-<img class="image" src="Images/fisk 1.jpg" alt="">
-<img class="image" src="Images/fisk 2.jpg" alt="">
-<img class="image" src="Images/fisk 3.jpg" alt="">
+<div class="divinside">
+  <p class="produktkategori">Drikkedunke</p>
+  <img class="image" src="Images/fisk 1.jpg" alt="">
+  <img class="image" src="Images/fisk 2.jpg" alt="">
+  <img class="image" src="Images/fisk 3.jpg" alt="">
+</div>
+<div class="divinside">
+  <p class="produktkategori">Termokander</p>
+  <img class="image" src="Images/sommerfugl 1.jpg" alt="">
+  <img class="image" src="Images/sommerfugl 2.jpg" alt="">
+  <img class="image" src="Images/sommerfugl 3.jpg" alt="">
+</div>
 </div>
 
-<div class="kolonne">
-<p class="produktkategori">Termokander</p>
-<img class="image" src="Images/sommerfugl 1.jpg" alt="">
-<img class="image" src="Images/sommerfugl 2.jpg" alt="">
-<img class="image" src="Images/sommerfugl 3.jpg" alt="">
-</div>
-
-</div>
 
 
   </body>
