start på sidste modul

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="picture">
-<img class="irc_mi" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Logo_TV_2015.svg/1200px-Logo_TV_2015.svg.png" onload="typeof google==='object'&&google.aft&&google.aft(this)" width="301" height="387" style="margin-top: 0px;" alt="relateret billede">
+<img class="irc_mi" src="e3f79b94-2ad4-4b1a-8605-df854231b64f.jpeg" width="301" height="387" style="margin-top: 0px;" alt="relateret billede">
 <p style="text-align:center;">Vores webside tilbyder et smalt sortiment af madkasser og drikkedunke i høj kvalitet bestående af metal for at skåne miljøet. </p>
 
 </div>
