midt på sidste modul

--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
 </div>
 
 <div class="picture">
-<img class="irc_mi" src="e3f79b94-2ad4-4b1a-8605-df854231b64f.jpeg" width="301" height="387" style="margin-top: 0px;" alt="relateret billede">
-<p style="text-align:center;">Vores webside tilbyder et smalt sortiment af madkasser og drikkedunke i høj kvalitet bestående af metal for at skåne miljøet. </p>
-
+<img class="irc_mi" src="Images/logo til miljø freak.png" width="301" height="387" style="margin-top: 0px;" alt="relateret billede">
 </div>
 
+
 <div class="divall">
+  <h3>Hvad tilbyder vi af produkter?</h3>
+  <p>Vores webside tilbyder et smalt sortiment af madkasser og drikkedunke i høj kvalitet bestående af metal for at skåne miljøet.</p>
+  <h3>Hvem er vi?</h3>
+  <p>Vi er en lille virksomhed som startede i 2017. Vores mål er at skåne miljøet og være bevidst omkring vores miljø.Vores produkter er produceret så de er 100% bæredygtige. Vores overbevisning til verden vi lever i, er det der har lagt grundstenen for vores firma.  Verden bruger plastic i alt for store mængder men med vores produkt kan vi sænke brugen af plastic og leve mere bæredygtigt.</p>
+  <h3>Hvad er vores vision?</h3>
+  <p>Vores vision er at gøre verden mere bæredygtig. Verden skal også være her om 100år.</p>
+
 <div class="divinside">
 <p class="produktkategori">Madkasser</p>
 <img class="image" src="Images/blomst 1.jpg" alt="">
