Efter tilføjelse af API

--- a/index.html
+++ b/index.html
@@ -32,21 +32,22 @@
 
 <div class="divinside">
 <p class="produktkategori">Madkasser</p>
-<img class="image" src="Images/blomst 1.jpg" alt="">
-<img class="image" src="Images/blomst 2.jpg" alt="">
-<img class="image" src="Images/blomst 3.jpg" alt="">
+  <a href="Madkasse1.html"><img class="image" src="Images/blomst 1.jpg" alt=""></a>
+<a href="Madkasse2.html"><img class="image" src="Images/blomst 2.jpg" alt=""></a>
+
+<a href="Madkasse3.html"><img class="image" src="Images/blomst 3.jpg" alt=""></a>
 </div>
 <div class="divinside">
   <p class="produktkategori">Drikkedunke</p>
-  <img class="image" src="Images/fisk 1.jpg" alt="">
-  <img class="image" src="Images/fisk 2.jpg" alt="">
-  <img class="image" src="Images/fisk 3.jpg" alt="">
+  <a href="Drikkedunk1.html"><img class="image" src="Images/fisk 1.jpg" alt=""></a>
+  <a href="Drikkedunk2.html"><img class="image" src="Images/fisk 2.jpg" alt=""></a>
+  <a href="Drikkedunk3.html"><img class="image" src="Images/fisk 3.jpg" alt=""></a>
 </div>
 <div class="divinside">
   <p class="produktkategori">Termokander</p>
-  <img class="image" src="Images/sommerfugl 1.jpg" alt="">
-  <img class="image" src="Images/sommerfugl 2.jpg" alt="">
-  <img class="image" src="Images/sommerfugl 3.jpg" alt="">
+  <a href="Termokande1.html"><img class="image" src="Images/sommerfugl 1.jpg" alt=""></a>
+  <a href="Termokande2.html"><img class="image" src="Images/sommerfugl 2.jpg" alt=""></a>
+  <a href="Termokande3.html"><img class="image" src="Images/sommerfugl 3.jpg" alt=""></a>
 </div>
 </div>
 
